--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
   <link
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://chatbotadmin.gwocu.com/assets/style.css">
   <title>GWOCU Chat Admin</title>
 </head>
 
